document struct changed.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     android:clipToPadding="false"
     android:background="#FFF"
-    tools:context=".cn.youthlife.zhuoning.activity.BaseActivity">
+    tools:context=".cn.youthlife.zhuoning.base.BaseActivity">
 
     <include
         android:id="@+id/include_actionbar"
