--- a/app/src/main/res/layout/controller_curtain_double.xml
+++ b/app/src/main/res/layout/controller_curtain_double.xml
@@ -146,7 +146,7 @@
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:name="zhuoning.youthlife.cn.zhuoning.cn.youthlife.zhuoning.fragment.CurtainFragment"
+        android:name="zhuoning.youthlife.cn.zhuoning.cn.youthlife.zhuoning.device_controller.CurtainFragment"
         android:tag="RIGHT"
         tools:layout="@layout/drawer_right_curtain"/>
 </android.support.v4.widget.DrawerLayout>
