--- a/app/src/main/res/layout/controller_curtain_single.xml
+++ b/app/src/main/res/layout/controller_curtain_single.xml
@@ -120,7 +120,7 @@
 
     <fragment
         android:id="@+id/drawer_curtain_right_slide"
-        android:name="zhuoning.youthlife.cn.zhuoning.cn.youthlife.zhuoning.fragment.CurtainFragment"
+        android:name="zhuoning.youthlife.cn.zhuoning.cn.youthlife.zhuoning.device_controller.CurtainFragment"
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_gravity="right"
