0410-03   finish activate device ,then getlist

--- a/app/src/main/res/layout/activity_connect_succeed.xml
+++ b/app/src/main/res/layout/activity_connect_succeed.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:background="#88f7ba"
-    tools:context=".device_activate.ConnectSucceedActivity">
+    android:background="#88f7ba"
+    tools:context=".device_activate.result.ConnectSucceedActivity">
 
     <ImageView
         android:layout_width="180dp"
