--- a/app/src/main/res/layout/activity_connect_fail.xml
+++ b/app/src/main/res/layout/activity_connect_fail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 android:background="#F7DFA1"
-    tools:context=".device_activate.ConnectSucceedActivity">
+    tools:context=".device_activate.result.ConnectSucceedActivity">
 
     <ImageView
         android:layout_width="180dp"
