--- a/app/src/main/res/layout/usercenter.xml
+++ b/app/src/main/res/layout/usercenter.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center_horizontal"
             android:src="@drawable/slogo" />
         <TextView
+            android:id="@+id/login_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
