--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -28,6 +28,7 @@
         />
 
     <EditText
+        android:id="@+id/feedback_edit_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
@@ -36,6 +37,7 @@
         />
 
     <Button
+        android:id="@+id/commit_feed_back"
         android:layout_width="184dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
