--- a/app/src/main/res/layout/activity_login_forgetpass.xml
+++ b/app/src/main/res/layout/activity_login_forgetpass.xml
@@ -41,7 +41,7 @@
         android:layout_weight="3"
         android:background="@color/transparent_25"
         android:gravity="center"
-        android:hint="请输入验证码"
+        android:hint="点击发送验证码"
         android:inputType="number"
         android:paddingBottom="12dp"
         android:paddingTop="12dp"
