--- a/app/src/main/res/layout/usercenter.xml
+++ b/app/src/main/res/layout/usercenter.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="未登录"/>
+            android:text="已登录"/>
     </LinearLayout>
 
     <LinearLayout
