--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -1,79 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#5ca0a6"
-    android:orientation="vertical"
-    android:weightSum="20"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/shape_login_background"
+              android:orientation="vertical"
+              android:weightSum="35"
     >
 
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="7"
-        android:gravity="center_vertical|center_horizontal"
-        android:paddingBottom="32dp"
-        android:paddingTop="56dp"
-        android:text="卓宁小控"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:layout_weight="10">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/zhuoning_logo"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingBottom="32dp"
+            android:paddingTop="56dp"/>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/login_name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:background="@color/transparent_25"
+        android:background="@color/login_edit_text"
         android:gravity="center"
         android:hint="请输入手机号"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp"
-        android:textSize="12sp" />
+        android:textColorHint="@color/login_hint"
+        android:textSize="14sp"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        />
 
     <EditText
         android:id="@+id/login_pass"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="2dp"
         android:layout_weight="3"
-        android:background="@color/transparent_25"
+        android:background="@color/login_edit_text"
         android:gravity="center"
         android:hint="请输入密码"
         android:inputType="textPassword"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp"
-        android:textSize="12sp" />
+        android:textColorHint="@color/login_hint"
+        android:textSize="14sp"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="335dp"
+        android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginTop="36dp"
-        android:layout_weight="3"
-        android:background="@drawable/log_in_button"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp"
-        android:text="登录" />
+        android:layout_weight="2.5"
+        android:background="@drawable/shape_login_button"
+        android:gravity="center"
+        android:text="登录"/>
 
     <TextView
         android:id="@+id/forget_password_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="12dp"
+        android:layout_weight="3"
+        android:gravity="center"
         android:text="忘记密码"
-        android:textSize="10sp" />
+        android:textColor="#575757"
+        android:textSize="10sp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="12dp"
+        android:layout_weight="7"
         android:orientation="horizontal">
 
         <ImageButton
@@ -81,32 +92,32 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_margin="18dp"
-            android:background="@drawable/qq" />
+            android:background="@drawable/qq"/>
 
         <ImageButton
             android:id="@+id/wechat"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_margin="18dp"
-            android:background="@drawable/wechat" />
+            android:background="@drawable/wechat"/>
 
         <ImageButton
             android:id="@+id/weibo"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_margin="18dp"
-            android:background="@drawable/weibo" />
+            android:background="@drawable/weibo"/>
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/create_account_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="36dp"
+        android:layout_weight="2"
         android:text="创建账户"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"/>
 
 
 </LinearLayout>
