--- a/app/src/main/res/layout/controller_drink.xml
+++ b/app/src/main/res/layout/controller_drink.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout_drink"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout_drink"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#7d7c7c7c">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +58,6 @@
                 android:layout_height="90dp"
                 android:layout_alignTop="@+id/drink_cold_button"
 
-
                 android:layout_toStartOf="@+id/imageView"
                 android:background="@drawable/selector_drink_button_hot"/>
 
@@ -90,4 +90,5 @@
         android:layout_gravity="end"
         android:tag="RIGHT"
         />
+
 </android.support.v4.widget.DrawerLayout>
