--- a/app/src/main/res/layout/dm_list_item.xml
+++ b/app/src/main/res/layout/dm_list_item.xml
@@ -10,8 +10,7 @@
         android:layout_width="42dip"
         android:layout_height="42dip"
         android:layout_alignParentLeft="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/light" />
+        android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/dname"
