--- a/app/src/main/res/layout/drawer_right_drink.xml
+++ b/app/src/main/res/layout/drawer_right_drink.xml
@@ -3,6 +3,7 @@
               android:layout_width="120dp"
               android:layout_height="match_parent"
               android:layout_gravity="end"
+              android:background="#00000000"
               android:orientation="vertical"
               android:weightSum="24">
 
