--- a/app/src/main/res/layout/activity_wifi_share.xml
+++ b/app/src/main/res/layout/activity_wifi_share.xml
@@ -1,44 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#46c2d2"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/shape_login_background"
+              android:orientation="vertical"
+              android:weightSum="30"
+    >
 
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:text="与设备共享您的wifi"
-    android:textSize="20sp"
-    android:textColor="@color/white"
-    android:gravity="center"
-    android:layout_marginTop="90dp"
-    />
     <TextView
-        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/wifi_ssid_text_view"
-        android:textSize="20sp"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:gravity="center"
-        android:layout_above="@+id/wifi_password_edit_text"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="38dp" />
+        android:text="@string/device_activate"
+        android:textColor="@color/white"
+        />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="@string/wifi_share"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        />
+
+    <TextView
+        android:id="@+id/wifi_ssid_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:gravity="center"
+        android:textColor="#77737373"
+        android:textSize="20sp"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        />
 
     <EditText
-        android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="请输入您的wifi密码"
         android:id="@+id/wifi_password_edit_text"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+
+        android:background="#45cccccc"
+        android:gravity="center"
+        android:hint="@string/please_give_pass"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        />
 
     <Button
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="确定"
         android:id="@+id/share_wifi_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/wifi_password_edit_text" />
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:background="@drawable/shape_login_button"
+        android:text="@string/sure"/>
 
-</RelativeLayout>
+</LinearLayout>
