--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--<style name="zhuoning_light_full_screen">-->
+    <!--<item name="windowFullscreen">true</item>-->
+    <!--<item name="windowContentOverlay">@null</item>-->
+    <!--</style>-->
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
