--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -2,48 +2,70 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/white"
+              android:background="@drawable/shape_login_background"
               android:orientation="vertical"
-              android:weightSum="10"
+              android:weightSum="35"
     >
 
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:background="#25AE77"
-    android:gravity="center"
-    android:text="问题反馈"
-        android:textColor="@color/white"
-    />
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center|left"
-        android:paddingLeft="20dp"
-        android:text="您的问题或者建议:"
-        android:textColor="@color/black"
-        />
+        android:layout_weight="10">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/zhuoning_logo"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingBottom="32dp"
+            android:paddingTop="56dp"/>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/feedback_edit_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="5"
-        android:padding="10dp"
+        android:layout_weight="10"
+        android:background="@color/login_edit_text"
+        android:gravity="center"
+        android:hint="请输入您要反馈的问题"
+        android:lineSpacingExtra="2dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textColorHint="@color/login_hint"
+        android:textSize="14sp"/>
+
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
         />
+
 
     <Button
         android:id="@+id/commit_feed_back"
-        android:layout_width="184dp"
+        android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="2"
-        android:background="@drawable/feedback_send_button"
-        android:text="点击发送"
+        android:layout_weight="2.5"
+        android:background="@drawable/shape_login_button"
+        android:gravity="center"
+        android:text="发送反馈"/>
+
+
+    <TextView
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="4"
+        android:gravity="center"
+        android:text="返回登录"
         android:textColor="@color/white"/>
 
 
