0506-01         fix some login bug  and refresh list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey_green">#6ec493</color>
     <color name="grey_red">#f28a6a</color>
 
+    <color name="red">#f7f74461</color>
 
     <color name="login_edit_text">#34ffffff</color>
     <color name="login_hint">#816f6f6f</color>
