--- a/app/src/main/res/layout/activity_messagelist.xml
+++ b/app/src/main/res/layout/activity_messagelist.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <WebView
-    android:id="@+id/message_web_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/message_web_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:isScrollContainer="true"
+    android:overScrollMode="never"
+    android:scrollbars="none"/>
 
