--- a/app/src/main/res/layout/dm_fragment.xml
+++ b/app/src/main/res/layout/dm_fragment.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/dm_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/devices_swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="2dp">
+        android:layout_height="match_parent">
 
-    </ListView>
+        <com.baoyz.swipemenulistview.SwipeMenuListView
+            android:id="@+id/dm_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="2dp"
+            android:scrollbars="none">
 
+        </com.baoyz.swipemenulistview.SwipeMenuListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
